fixed minor details such as color and line spacing in code

--- a/05week/BootstrapResponsiveUtilityProject/bsresponsivestyle.css
+++ b/05week/BootstrapResponsiveUtilityProject/bsresponsivestyle.css
@@ -3,31 +3,31 @@ body {
 }
 
 .topstory h2 {
-  font-size: 20px;
+  font-size: 23px;
   border-bottom: solid grey 1px;
   margin-bottom: 8px;
   padding-bottom: 5px;
 }
 
 .topstory p {
-  font-size: 10px;
+  font-size: 12px;
   font-weight: bold;
 }
 
 .techbutt {
-  background-color: black;
+  background-color: #737373;
   color: white;
   padding: 10px;
 }
 
 h1 {
   font-size: 30px;
-  font-family: sans-serif arial;
+  font-family: sans-serif, "arial";
   margin-top: 13px;
 }
 
 footer {
-  background-color: black;
+  background-color: #737373;
   margin-top: 25px;
   color: white;
   padding: 35px 15px 5px 35px;
